--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -250,7 +250,7 @@
 
 .fortyk .sheet-tabs {
     -webkit-box-flex: 1;
-
+    margin-top: 0px;
     height: 100px;
     font-weight:bold;
     font-style:bold;
@@ -292,11 +292,11 @@
 
 .fortyk .tabs .item {
     line-height: 12px;
-    height:100%;
+    height:50px;
     width:100%;
     border: 1px solid #999;
-    height:30px;
-    padding-top:3px;
+    
+    padding-top:12px;
 
 }
 .fortyk .tabs .item.active {
@@ -411,6 +411,65 @@
     text-align: right;
 }
 .fortyk .new-skill{
-    font-weight 14px;
+    font-weight: 14px;
 }
-
+.fortyk .corruption-insanity{
+    height:100%;
+}
+.fortyk .corruption{
+    margin-right:3px;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+.fortyk .corr-item{
+    flex:none;
+    margin-bottom: 5px;
+}
+.fortyk .list{
+    border: 1px solid #999;
+    flex:none;
+    justify-items: stretch;
+    align-items: stretch;
+}
+.fortyk .list3col{
+    
+    grid-template-columns: auto 30px 30px;
+}
+.fortyk .list4col{
+    
+    grid-template-columns: auto auto 30px 30px;
+}
+.fortyk .list5col{
+    
+    grid-template-columns: 50% auto auto 30px 30px;
+}
+.fortyk .list-item{
+    border: 1px solid #999;
+    width:100%;
+    height:100%;
+    padding-left:3px;
+}
+.fortyk .section-title{
+    text-align: center;
+    border-bottom: 2px solid #999;
+    width:100%;
+}
+.fortyk .gear{
+    align-items: start;
+}
+.fortyk .cyber{
+    
+    margin-right: 3px;
+}
+.fortyk .combat-weaponsarmor{
+    align-items: start;
+}
+.fortyk .forcefield{
+    width:100%;
+}
+.fortyk .armor{
+    border: 1px solid #999;
+}
+.fortyk .weapons{
+    text-align: left;
+}
