--- a/templates/actor/actor-gear.html
+++ b/templates/actor/actor-gear.html
@@ -1,53 +1,62 @@
-<div class="gear grid grid-2col">
+<div class="gear flexrow">
     <div class="cyber flexcol">
-        <label>CYBERNETICS</label>
+        <span class="section-title">CYBERNETICS</span>
         <a class="item-create button" data-type="cybernetic" title="Add a new Cybernetic">Add Cybernetic</a>
-        <ul>
+        <div class="list list4col grid grid-4col">
+            <span class="list-item">Name</span>
+            <span class="list-item">Location</span>
+            <span class="list-button"></span>
+            <span class="list-button"></span>
             {{#each actor.cybernetics as |c key|}}
-            <div class="list-item flexrow">
-                <dt class="item-descr" data-name="{{c.name}}" data-item-descr="{{c.data.description.value}}">{{c.name}}</dt>
-                <select data-item-id="{{c._id}}" class="cyber-location-select" data-dtype="String">
-                    {{#select c.data.location.value}}
 
-                    {{#each ../data.characterHitLocations as |l key|}}
+            <a class="item-descr list-item" data-name="{{c.name}}" data-item-descr="{{c.data.description.value}}">{{c.name}}</a>
+            <select data-item-id="{{c._id}}" class="cyber-location-select list-item" data-dtype="String">
+                {{#select c.data.location.value}}
 
-                    <option value="{{key}}">{{l.label}}</option>
-                    {{/each}}
-                    {{/select}}
-                </select>
-                <a class="cyberItem item-edit" title="Edit" data-item-id="{{c._id}}"></a>
-                <a class="cyberItem item-delete" title="Delete" data-item-id="{{c._id}}"></a>
-            </div>
+                {{#each ../data.characterHitLocations as |l key|}}
 
-           
+                <option value="{{key}}">{{l.label}}</option>
+                {{/each}}
+                {{/select}}
+            </select>
+            <a class="cyberItem item-edit" title="Edit" data-item-id="{{c._id}}"></a>
+            <a class="cyberItem item-delete" title="Delete" data-item-id="{{c._id}}"></a>
+
+
+
             {{/each}}
 
-        </ul>
-    </div>
-    <div class="wargear flexcol">
-        <label>CARRY</label>
-        <div class="carry flexcol">
-            <label>Total Weight: {{data.carry.value}}</label>
-            <label>Max Weight: {{data.carry.max}}</label>
         </div>
-        <label>WARGEAR</label>
+    </div>
+    <div class="cyber flexcol">
+        <span class="section-title">CARRY</span>
+        <div class="carry flexcol">
+            <span>Total Weight: {{data.carry.value}}kg</span>
+            <span>Max Weight: {{data.carry.max}}kg</span>
+        </div>
+        <span class="section-title">WARGEAR</span>
         <a class="wargear-create button" title="Add a new Wargear">Add Wargear</a>
-        
-        <ul>
+
+        <div class="list list5col grid grid-5col">
+            <span class="list-item">Name</span>
+            <span class="list-item">Amount</span>
+            <span class="list-item">Weight</span>
+            <span class="list-button"></span>
+            <span class="list-button"></span>
             {{#each actor.wargear as |w key|}}
-            
-            <div class="list-item flexrow">
-                <dt class="item-descr" data-name="{{w.name}}" data-item-descr="{{w.data.description.value}}">{{w.name}}</dt>
-                <input type="text" class="wargear-amount" value="{{w.data.amount.value}}" data-item-id="{{w._id}}" data-dtype="Number">
-                <label>Weight: {{w.data.weight.total}}</label>
 
-                <a class="wargearItem item-edit" title="Edit" data-item-id="{{w._id}}"></a>
-                <a class="wargearItem item-delete" title="Delete" data-item-id="{{w._id}}"></a>
-            </div>
 
-           
+            <a class="item-descr list-item" data-name="{{w.name}}" data-item-descr="{{w.data.description.value}}">{{w.name}}</a>
+            <input type="text" class="wargear-amount list-item" value="{{w.data.amount.value}}" data-item-id="{{w._id}}" data-dtype="Number">
+            <span class="list-item">{{w.data.weight.total}}kg</span>
+
+            <a class="list-button item-edit" title="Edit" data-item-id="{{w._id}}"></a>
+            <a class="list-button item-delete" title="Delete" data-item-id="{{w._id}}"></a>
+
+
+
             {{/each}}
 
-        </ul>
+        </div>
     </div>
 </div>
